--- a/_includes/home-layout.njk
+++ b/_includes/home-layout.njk
@@ -115,6 +115,12 @@
       font-weight: normal;
       font-size: 28px;
     }
+    main h3 {
+      color: var(--highlight-color, #159957);
+      margin: 1rem 0;
+      font-weight: normal;
+      font-size: 24px;
+    }
     main img {
       box-sizing: border-box;
       max-width: 100%;
