--- a/_includes/post-layout.njk
+++ b/_includes/post-layout.njk
@@ -164,9 +164,8 @@
       <h1>Rough.js</h1>
       <h2>Create graphics with a hand-drawn, sketchy, appearance</h2>
       <div>
+        <a href="/" class="btn">Home</a>
         <a href="https://github.com/pshihn/rough" class="btn">View on GitHub</a>
-        <a href="https://github.com/pshihn/rough/wiki" class="btn">Full API</a>
-        <a href="https://twitter.com/RoughLib" class="btn">Twitter</a>
       </div>
       <div style="padding-top: 10px;">
         <a class="github-button" href="https://github.com/pshihn/rough" data-size="large" data-show-count="true" aria-label="Star pshihn/rough on GitHub">Star</a>
