updated social images

--- a/_includes/post-layout.njk
+++ b/_includes/post-layout.njk
@@ -8,19 +8,19 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Rough.js">
   <meta property="og:description" content="Rough.js is a light weight javascript library that lets you draw graphics with a hand-drawn, sketchy, appearance.">
-  <meta property="og:image" content="https://roughjs.com/images/cap_demo.png">
-  <meta property="og:image:width" content="739">
-  <meta property="og:image:height" content="238">
+  <meta property="og:image" content="https://roughjs.com/images/social.png">
+  <meta property="og:image:width" content="1280">
+  <meta property="og:image:height" content="670">
 
   <meta name="twitter:site" value="@RoughLib">
   <meta name="twitter:card" value="summary_large_image">
   <meta property="twitter:title" content="Rough.js">
   <meta property="twitter:description" content="Rough.js is a light weight javascript library that lets you draw graphics with a hand-drawn, sketchy, appearance.">
-  <meta property="twitter:image" content="https://roughjs.com/images/cap_demo.png">
-  <meta name="twitter:image:width" content="739">
-  <meta name="twitter:image:height" content="238">
+  <meta property="twitter:image" content="https://roughjs.com/images/social.png">
+  <meta name="twitter:image:width" content="1280">
+  <meta name="twitter:image:height" content="670">
 
-  <link rel="icon" href="/images/fav.jpg" type="image/jpg">
+  <link rel="icon" href="/images/fav.png" type="image/png">
 
   <style>
     body {
@@ -165,11 +165,11 @@
       <h2>Create graphics with a hand-drawn, sketchy, appearance</h2>
       <div>
         <a href="/" class="btn">Home</a>
-        <a href="https://github.com/pshihn/rough" class="btn">View on GitHub</a>
+        <a href="https://github.com/rough-stuff/rough" class="btn">View on GitHub</a>
       </div>
       <div style="padding-top: 10px;">
-        <a class="github-button" href="https://github.com/pshihn/rough" data-size="large" data-show-count="true" aria-label="Star pshihn/rough on GitHub">Star</a>
-        <a class="github-button" href="https://github.com/pshihn/rough/fork" data-icon="octicon-repo-forked" data-size="large" aria-label="Fork pshihn/rough on GitHub">Fork</a>
+        <a class="github-button" href="https://github.com/rough-stuff/rough" data-size="large" data-show-count="true" aria-label="Star rough-stuff/rough on GitHub">Star</a>
+        <a class="github-button" href="https://github.com/rough-stuff/rough/fork" data-icon="octicon-repo-forked" data-size="large" aria-label="Fork rough-stuff/rough on GitHub">Fork</a>
       </div>
     </header>
     <main>
