add sponsor button

--- a/_includes/home-layout.njk
+++ b/_includes/home-layout.njk
@@ -170,6 +170,7 @@
         <a href="https://github.com/rough-stuff/rough" class="btn">View on GitHub</a>
         <a href="https://github.com/rough-stuff/rough/wiki" class="btn">Full API</a>
         <a href="https://twitter.com/RoughLib" class="btn">Twitter</a>
+        <a href="https://opencollective.com/rough" class="btn">Sponsor this project</a>
       </div>
       <div style="padding-top: 10px;">
         <a class="github-button" href="https://github.com/rough-stuff/rough" data-size="large" data-show-count="true" aria-label="Star rough-stuff/rough on GitHub">Star</a>
