--- a/_includes/home-layout.njk
+++ b/_includes/home-layout.njk
@@ -42,7 +42,7 @@
       text-decoration: none;
     }
     main {
-      padding: 16px 300px 16px 10px;
+      padding: 16px 12px;
       max-width: 700px;
       margin: 0 auto;
       position: relative;
@@ -128,23 +128,18 @@
     }
     a.sponsor-card {
       color: inherit;
-      display: flex;
+      display: inline-flex;
       flex-direction: column;
       max-width: 170px;
       font-size: 13px;
       border: 1px solid #e5e5e5;
       border-radius: 5px;
       padding: 8px;
+      margin: 0 4px 4px 0;
     }
     .sponsor-card h5 {
       margin: 4px 0;
       font-size: 16px;
-    }
-    #sponsorPanel {
-      font-size: 13px;
-      position: absolute;
-      top: 80px;
-      right: 0;
     }
 
     @media(hover: hover) {
@@ -160,15 +155,6 @@
       a.sponsor-card:hover {
         box-shadow: none;
         border-color: var(--highlight-color);
-      }
-    }
-
-    @media(max-width: 1024px) {
-      main {
-        padding: 16px 12px;
-      }
-      #sponsorPanel {
-        display: none;
       }
     }
     
