--- a/_includes/home-layout.njk
+++ b/_includes/home-layout.njk
@@ -140,10 +140,8 @@
       border-radius: 5px;
       padding: 8px;
       margin: 8px 8px 8px 0;
-      flex: 1;
-      flex-basis: 0.000000001px;
+      width: 148px;
       min-width: 148px;
-      max-width: calc(50% - 24px);
     }
     .sponsor-card h5 {
       margin: 4px 0;
