--- a/_includes/home-layout.njk
+++ b/_includes/home-layout.njk
@@ -193,6 +193,9 @@
     }
   </style>
   <link rel="stylesheet" href="{{ '/css/prism-vs.css' | url }}">
+
+  <meta name="navu:site" content="S43X602">
+  <script async src="https://embed.navu.co/boot.js"></script>
 </head>
 
 <body>
