--- a/_includes/home-layout.njk
+++ b/_includes/home-layout.njk
@@ -152,7 +152,11 @@
       width: 90px;
       height: 90px;
       display: block;
-      margin: 0 auto
+      margin: 0 auto;
+      object-fit: contain;
+    }
+    a.sponsor-card img.wide {
+      width: 100%;
     }
 
     @media(hover: hover) {
